--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
     <img  data-aos="fade-up"  class="fecha" src="./img-editables/fecha.png" alt="">
     <div class="information">
 
+           <div  class="information-bloque">
+        <img data-aos="fade-up" src="./img/anillos-de-boda 2.png" alt="">
+        <h3 data-aos="fade-up">Ceremonia</h3>
+        <p data-aos="fade-up">19:00 hs - Iglesia Verdad y Vida <br> Soriano 278, Comodoro Rivadavia. <br> </p>
+        <a data-aos="fade-up" target="_blank" class="boton"  href="https://www.google.com/maps?rlz=1C5BAPC_enAR1171AR1174&gs_lcrp=EgZjaHJvbWUqBwgBECEYoAEyBggAEEUYOTIHCAEQIRigATIHCAIQIRigATIHCAMQIRigAdIBCDk3NDlqMGo3qAIAsAIA&um=1&ie=UTF-8&fb=1&gl=ar&sa=X&geocode=KVFGvYfpq-W9MXrZS9X9CmBW&daddr=Osvaldo+Soriano+N%C2%B0+278,+9000+Comodoro+Rivadavia,+Chubut">CÓMO LLEGAR</a>
+      </div>
       <div  class="information-bloque">
         <img data-aos="fade-up" src="./figuras/copas.png" alt="">
-        <h3 data-aos="fade-up">Ceremonia y fiesta</h3>
-        <p data-aos="fade-up">19:30 hs - Salón La Mirada. <br> Soriano 151, Comodoro Rivadavia. <br> </p>
+        <h3 data-aos="fade-up">Fiesta</h3>
+        <p data-aos="fade-up">20:00 hs - Salón La Mirada. <br> Soriano 151, Comodoro Rivadavia. <br> </p>
         <a data-aos="fade-up" target="_blank" class="boton"  href="https://www.google.com/maps/dir//Osvaldo+Soriano+151,+Comodoro+Rivadavia,+Chubut/@-45.857258,-67.6438366,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0xbde5ab8d7949d6fb:0xb2a8f69e7c198125!2m2!1d-67.561436!2d-45.8572876?entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D">CÓMO LLEGAR</a>
       </div>
 
@@ -75,18 +81,18 @@
     <div class="iconos">
         <div  class="iconos-block">
             <img data-aos="fade-up"  src="./img/icons8-silla-100.png" alt="icono">
-            <p data-aos="fade-up" > 19:10 Hs</p>
+            <p data-aos="fade-up" > 18:30 Hs</p>
             <p data-aos="fade-up" >Toma tu lugar</p>
         </div>
         <div   class="iconos-block">
             <img data-aos="fade-up"  src="./img/anillos-de-boda 2.png" alt="icono">
-            <p data-aos="fade-up" >19:30 Hs</p>
+            <p data-aos="fade-up" >19:00 Hs</p>
             <p data-aos="fade-up" >Ceremonia</p>
         </div>
         <div  class="iconos-block">
-            <img data-aos="fade-up"  src="./img/brindis.png" alt="icono">
-            <p data-aos="fade-up">21:30 Hs</p>
-            <p data-aos="fade-up">Brindis</p>
+            <img data-aos="fade-up"  src="./img/corazones.png" alt="icono">
+            <p data-aos="fade-up">20:00 Hs</p>
+            <p data-aos="fade-up">Ingreso al salón</p>
         </div>
         <div  class="iconos-block">
             <img data-aos="fade-up" src="./img/cena.png" alt="icono">
@@ -94,9 +100,9 @@
             <p data-aos="fade-up">1er plato</p>
         </div>
         <div  class="iconos-block">
-            <img data-aos="fade-up"   src="./img/icons8-fiesta-100.png" alt="icono">
-            <p data-aos="fade-up"  >00:00 Hs</p>
-            <p data-aos="fade-up"  >Fiesta</p>
+            <img data-aos="fade-up"  src="./img/brindis.png" alt="icono">
+            <p data-aos="fade-up"  >23:30 Hs</p>
+            <p data-aos="fade-up"  >Brindis</p>
         </div>
     </div>
 </div>
